// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftViewExtraLargeHeader > renders correctly 1`] = `
<v-row-stub
  class="header-row"
  data-v-e225dff3=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="d-flex flex-column max-height-100"
    cols="4"
    data-v-e225dff3=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-e225dff3=""
    >
      <shift-view-evocon-logo-btn-stub
        class="ma-1"
        data-v-e225dff3=""
        large="true"
      />
      <shift-view-station-select-stub
        class="ma-1 flex-grow-1"
        data-v-e225dff3=""
        large="true"
        titleclass="text-headline-large"
      />
    </div>
    <v-row-stub
      class="flex-grow-0"
      data-v-e225dff3=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column"
        cols="6"
        data-v-e225dff3=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-shift-quantity-block-stub
          class="ma-1"
          compact="false"
          data-v-e225dff3=""
          large="true"
          loading="false"
          maxshifttotalfontsize="96"
          minshifttotalfontsize="28"
          targetclass="text-headline-medium"
          valueclass=""
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column"
        cols="6"
        data-v-e225dff3=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <shift-view-current-batch-block-stub
          class="ma-1 flex-grow-1"
          data-v-e225dff3=""
          large="true"
          loading="false"
          progresstype="bar"
          showflagicon="true"
          valueclass="text-headline-medium"
        />
      </v-col-stub>
    </v-row-stub>
    <shift-view-batch-widget-block-stub
      buttonsize="default"
      class="overflow-hidden ma-1"
      data-v-e225dff3=""
      expanded="false"
      headerbottommarginclass="mb-2"
      large="true"
      loading="false"
      progresstype="circle"
      showcurrentbatch="false"
      valueclass="text-headline-medium"
    />
  </v-col-stub>
  <v-col-stub
    class="d-flex flex-column"
    cols="6"
    data-v-e225dff3=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <shift-view-shift-select-stub
      class="ma-1"
      compact="false"
      compactoffline="false"
      data-v-e225dff3=""
      large="true"
      status="online"
      titleclass="text-headline-large"
    />
    <v-row-stub
      data-v-e225dff3=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="d-flex flex-column"
        cols="6"
        data-v-e225dff3=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <widget-holder-stub
          class="ma-1 flex-grow-1"
          data-v-e225dff3=""
          defaultactivetab="0"
          large="true"
          loading="false"
          openinbottomsheet="false"
          widgetkey="0"
          widgetvalueclass="text-display-large"
        />
      </v-col-stub>
      <v-col-stub
        class="d-flex flex-column"
        cols="6"
        data-v-e225dff3=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <widget-holder-stub
          class="ma-1 flex-grow-1"
          data-v-e225dff3=""
          defaultactivetab="1"
          large="true"
          loading="false"
          openinbottomsheet="false"
          widgetkey="1"
          widgetvalueclass="text-display-large"
        />
      </v-col-stub>
    </v-row-stub>
  </v-col-stub>
  <v-col-stub
    class="d-flex flex-column"
    cols="2"
    data-v-e225dff3=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-e225dff3=""
    >
      <time-component-stub
        class="ma-1"
        data-v-e225dff3=""
        large="true"
        timeclass="text-headline-large"
      />
      <shift-view-user-settings-btn-stub
        class="ma-1"
        data-v-e225dff3=""
        large="true"
      />
    </div>
    <oee-component-stub
      class="ma-1"
      data-v-e225dff3=""
      expanded="false"
      labelclass="large-label"
      loading="false"
      maxoeefontsize="96"
      minoeefontsize="28"
      oeeclass="text-display-large"
      oeecomponentsclass="text-headline-medium"
      vertical="false"
    />
  </v-col-stub>
</v-row-stub>
`;

exports[`ShiftViewExtraLargeHeader > renders correctly without shifts 1`] = `
<v-row-stub
  class="header-row"
  data-v-e225dff3=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-col-stub
    class="d-flex flex-column max-height-100"
    cols="4"
    data-v-e225dff3=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-e225dff3=""
    >
      <shift-view-evocon-logo-btn-stub
        class="ma-1"
        data-v-e225dff3=""
        large="true"
      />
      <shift-view-station-select-stub
        class="ma-1 flex-grow-1"
        data-v-e225dff3=""
        large="true"
        titleclass="text-headline-large"
      />
    </div>
    <!--v-if-->
    <!--v-if-->
  </v-col-stub>
  <v-col-stub
    class="d-flex flex-column"
    cols="6"
    data-v-e225dff3=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <shift-view-shift-select-stub
      class="ma-1"
      compact="false"
      compactoffline="false"
      data-v-e225dff3=""
      large="true"
      status="online"
      titleclass="text-headline-large"
    />
    <!--v-if-->
  </v-col-stub>
  <v-col-stub
    class="d-flex flex-column"
    cols="2"
    data-v-e225dff3=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <div
      class="d-flex"
      data-v-e225dff3=""
    >
      <time-component-stub
        class="ma-1"
        data-v-e225dff3=""
        large="true"
        timeclass="text-headline-large"
      />
      <shift-view-user-settings-btn-stub
        class="ma-1"
        data-v-e225dff3=""
        large="true"
      />
    </div>
    <!--v-if-->
  </v-col-stub>
</v-row-stub>
`;
